# DServerFramework

./: .gitmodules  README.md
AirplaneServer/: AirplaneServer.sln
AirplaneServer/ServerConfig/: Config.lua  ConnectionServerConfig.lua  ConnectionServerPassword.lua  LogicServerConfig.lua
AirplaneServer/src/CenterServer/: AirCenterServerSession.cpp  AirCenterServerSession.h  CenterServerSession.cpp  CenterServerSession.h
AirplaneServer/src/Common/: CenterServerPassword.h  HelpFunction.h  LogicNetSession.h  NetThreadSession.h  UsePacketExtNetSession.h  WrapJsonValue.h  packet.h
AirplaneServer/src/Common/prototol/: CenterServerRecvOP.h  CenterServerSendOP.h
AirplaneServer/src/ConnectionServer/: ClientLogicObject.cpp  LogicServerSession.cpp
AirplaneServer/src/LogicServer/: CenterServerConnection.cpp  CenterServerConnection.h  ClientMirror.cpp  ClientMirror.h  ConnectionServerConnection.cpp  ConnectionServerConnection.h  LogicServer.cpp
AirplaneServer/src/SimulatePlayer/: SimulateClient.cpp
AirplaneServer/src/test/: ClientExtOP.h
AirplaneServer/vcproj-12/: CenterServer.vcxproj  CenterServer.vcxproj.filters  ConnectionServer.vcxproj  ConnectionServer.vcxproj.filters  GameServer.vcxproj.filters  SoloServer.vcxproj.filters
DDServerFramework/: CMakeLists.txt  DDServerFramework.sln
DDServerFramework/ServerConfig/: CenterServerConfig.json  CenterServerConfig.lua  CenterServerPassword.lua  ConnetionServerConfig.json  LogicServerConfig.json  LogicServerConfig.lua  ServerConfig.pb.cc  ServerConfig.pb.h  ServerConfig.proto
DDServerFramework/src/CenterServer/: AirCenterServerSession.cpp  CenterServer.cpp  CenterServerSession.cpp  CenterServerSession.h  GlobalValue.cpp  GlobalValue.h
DDServerFramework/src/Common/: AutoConnectionServer.h  ConnectionServerPassword.h  Context.h  LogicNetSession.h  MakeUID.h  NetSession.h  NetThreadSession.cpp  NetThreadSession.h  SocketSession.h  UsePacketExtNetSession.cpp  UsePacketSingleNetSession.cpp  UsePacketSingleNetSession.h  UseWebPacketSingleNetSession.cpp  UseWebPacketSingleNetSession.h  WrapLog.h  etcdclient.h
DDServerFramework/src/Common/prototol/: CenterServerRecvOP.h  CenterServerSendOP.h  ConnectionServerRecvOP.h  ConnectionServerSendOP.h
DDServerFramework/src/ConnectionServer/: ClientLogicObject.cpp  ClientLogicObject.h  ClientSession.cpp  ClientSession.h  ClientSessionMgr.cpp  ConnectionServer.cpp  LogicServerSession.cpp  LogicServerSession.h  LogicServerSessionMgr.cpp  LogicServerSessionMgr.h
DDServerFramework/src/LogicServer/: CenterServerConnection.cpp  CenterServerConnection.h  ClientMirror.cpp  ClientMirror.h  ConnectionServerConnection.cpp  ConnectionServerConnection.h  GlobalValue.cpp  GlobalValue.h  LogicServer.cpp
DDServerFramework/src/SimulatePlayer/: SimulateClient.cpp
DDServerFramework/src/WSConnectionServer/: ClientSession.cpp  ClientSession.h  ClientSessionMgr.cpp  ClientSessionMgr.h  ConnectionServer.cpp  LogicServerSession.cpp  LogicServerSession.h  LogicServerSessionMgr.cpp  LogicServerSessionMgr.h  Makefile  UseCellnetSingleNetSession.cpp  UseCellnetSingleNetSession.h  UseWebPacketSingleNetSession.cpp  UseWebPacketSingleNetSession.h
DDServerFramework/src/WSConnectionServer/proto/: LogicServerWithConnectionServer.pb.cc  LogicServerWithConnectionServer.pb.h  LogicServerWithConnectionServer.proto
DDServerFramework/src/test/: CenterServerExt.cpp  CenterServerExtRecvOP.h  ClientExtOP.h  LogicServerExt.cpp
DDServerFramework/vcproj-12/: CenterServer.vcxproj  CenterServer.vcxproj.filters  ConnectionServer.vcxproj  ConnectionServer.vcxproj.filters  GameServer.vcxproj  SimulatePlayer.vcxproj  SimulatePlayer.vcxproj.filters  SoloServer.vcxproj  SoloServer.vcxproj.filters  WSConnectionServer.vcxproj  WSConnectionServer.vcxproj.filters
